# libarchive

./: CMakeLists.txt  config.h.in
lib/libarchive/win/x64/Release/: archive.lib  zlib.lib
lib/libarchive/win/x86/Debug/: archive.lib  zlibd.lib
lib/libarchive/win/x86/Release/: archive.lib  zlib.lib
lib/win/archive/: Readme.txt
lib/win/archive/include/libxml/: xmlversion.h
lib/win/archive/x64/Debug/: bz2d.lib  charset.lib  iconv.lib  lz4d.lib  lzma.lib  zstd.lib
lib/win/archive/x64/Debug/trueconf/: charset.lib  iconv.lib  libssl.lib
lib/win/libarchive static/x64/Release/: zlib.lib
lib/win/libarchive static/x86/Debug/: zlibd.lib
lib/win/libarchive static/x86/Release/: archive_static.lib
lib/win/libarchive/x64/Debug/: archive.lib  zlibd.lib
lib/win/libarchive/x64/Release/: archive_static.lib
lib/win/libarchive/x86/Debug/: zlibd.lib
lib/win/libarchive/x86/Release/: zlib.lib
src/: CMakeLists.txt  main.cpp
test/: test.txt
